--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ html {
 /* ********************************** */
 .banner {
 	background-image: linear-gradient(100deg, #000000, #00000020),
-		url(/images/coffe.jpg);
+		url(images/coffe.jpg);
 	height: 60rem;
 	background-size: cover;
 	background-position: center;
@@ -319,7 +319,7 @@ html {
 
 .category-moca {
 	background-image: linear-gradient(#00000080, #00000080),
-		url(/images/moca-category.jpg);
+		url(images/moca-category.jpg);
 	background-size: cover;
 	background-position: bottom;
 	background-repeat: no-repeat;
@@ -327,7 +327,7 @@ html {
 
 .category-capuchino {
 	background-image: linear-gradient(#00000080, #00000080),
-		url(/images/capuchino-category.jpg);
+		url(images/capuchino-category.jpg);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -335,7 +335,7 @@ html {
 
 .category-expreso {
 	background-image: linear-gradient(#00000080, #00000080),
-		url(/images/expreso-category.jpg);
+		url(images/expreso-category.jpg);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
